# KiroMK4

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
config/: default.yaml
docs/: 00-README.md  01-executive-summary.md  02-system-architecture.md  03-executive-function-engine.md  04-persona-system.md  05-memory-architecture.md  06-hardware-roadmap.md  07-development-plan.md  08-future-expansion.md  09-assumptions-risks.md
scripts/: install.sh  run.sh
src/kiro/: __init__.py  config.py  events.py  main.py
src/kiro/audio/: __init__.py  capture.py  pipeline.py  stt.py  tts.py  vad.py  wake_word.py
src/kiro/conversation/: __init__.py  manager.py
src/kiro/efe/: __init__.py  capture.py  engine.py  models.py  queries.py  scheduler.py  store.py
src/kiro/intent/: __init__.py  router.py
src/kiro/llm/: __init__.py  gateway.py
src/kiro/llm/providers/: __init__.py  base.py  claude.py  openai.py
src/kiro/utils/: __init__.py  logging.py
src/kiro/voice/: __init__.py
tests/: __init__.py  test_audio.py  test_config.py  test_efe.py  test_events.py  test_models.py
